--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react": "19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "sonner": "^1.7.1",
